--- a/action.yml
+++ b/action.yml
@@ -12,21 +12,6 @@ outputs:
     value: 'Successful'
     description: 'Samle description'
 runs:
-  using: "composite"
-  steps:
-    - name: Clone the repo
-      uses: actions/checkout@v3
-
-    - name: setup python
-      uses: actions/setup-python@v3
-
-    - name: debug
-      shell: bash
-      run: |
-        ls -a
-        pwd
-
-    - id: random-number-generator
-      shell: bash
-      run: python main.py  ${{ inputs.config_file }} ${{ inputs.playstore_secret }}
+  using: "docker"
+  image: "Dockerfile"
 
