--- a/action.yml
+++ b/action.yml
@@ -28,7 +28,8 @@ runs:
     - shell: bash
       run: |
         echo $ENV
-        echo $GITHUB_ACTION_PATH
+        cd $GITHUB_ACTION_PATH
+        ls -a
 
     - run: cd src && python main.py
       shell: bash
